@@ -156,11 +156,13 @@ public class ObjectType {
      * @throws ClassNotFoundException
      * @throws InstantiationException
      * @throws IllegalAccessException
+     * @throws NoSuchMethodException 
+     * @throws InvocationTargetException,  
      */
-    public static Object getInstance(String className) throws ClassNotFoundException,
-            InstantiationException, IllegalAccessException {
+    public static Object getInstance(String className) throws ClassNotFoundException, InstantiationException,
+            IllegalAccessException, NoSuchMethodException, InvocationTargetException {
         Class<?> c = loadClass(className);
-        Object o = c.newInstance();
+        Object o = c.getDeclaredConstructor().newInstance();
 
         if (Debug.verboseOn()) {
             Debug.logVerbose("Instantiated object: " + o.toString(), module);
